--- a/assets/style.css
+++ b/assets/style.css
@@ -23,6 +23,11 @@
     font-family: var(--font-family);
 }
 
+html {
+    scroll-behavior: smooth;
+    scroll-padding-top: 100px;
+}
+
 /* Caracteristicas de mi Header */
 .header1 {
     background: var(--steel-blue);
@@ -134,13 +139,14 @@ main {
     width: 100%;
 }
 
-.hero {
-    margin-top: 230px;
-    padding: 70px 0;
+#hero {
+    /* top: 180px; */
+    padding: 50px 0;
     max-width: 1200px;
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 120vh;
 }
 
 .hero-text {
@@ -161,7 +167,7 @@ main {
 .hero-text p {
     font-size: 16px;
     width: 80%;
-    color: var(--white);
+    color: var(--gunmetal);
     text-align: justify;
 }
 
@@ -180,6 +186,122 @@ main {
     border-radius: 15px;
 }
 
+/* Cards Section */
+#cards {
+    padding: 150px 0 50px 0;
+    max-width: 1600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 80px;
+    height: 120vh;
+}
+
+#cards h2 {
+    font-size: 40px;
+    font-weight: 800;
+    color: var(--steel-blue);
+}
+
+.cards-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: flex-start;
+    height: 100vh;
+    gap: 20px;
+    
+    /* padding: 20px; */
+}
+
+.card-info {
+    width: 400px;
+    height: 450px;
+    background-color: var(--columbia-blue);
+    padding: 20px 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    border-radius: 10px;
+    gap: 5px;
+}
+
+.card-info img {
+    border-radius: 15px;
+    object-fit: contain;
+    width: 100%;
+    height: 80%;
+}
+
+.card-info h4 {
+    font-size: 12px;
+    font-weight: 500;
+}
+
+#about-us {
+    padding: 10px 0 50px 0;
+    max-width: 1600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 80px;
+    height: 120vh;
+}
+
+#about-us h2 {
+    font-size: 40px;
+    font-weight: 800;
+    color: var(--steel-blue);
+}
+
+.about-us-text {
+    font-size: 16px;
+    font-weight: 400;
+    color: var(--gunmetal);
+    text-align: center;
+}
+
+#contacto {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    height: 75vh;
+    margin-bottom: 40px;
+}
+
+#contacto h2 {
+    font-size: 40px;
+    font-weight: 800;
+    color: var(--steel-blue);
+}
+
+#contacto p {
+    padding: 10px;
+}
+
+
+.form-title {
+    font-weight: bold;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.form-input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    margin-bottom: 20px;
+}
+/* 
+.map-container {
+    width: 100%;
+} */
 
 
 
@@ -220,4 +342,67 @@ main {
     display: flex;
     justify-content: center;
     align-items: center; */
+}
+
+
+/* Formato de Input para Ingresar/Registrarse */
+
+.form {
+    background-color: var(--lilac);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    height: 75vh;
+    margin-bottom: 20px;
+}
+
+.form__title {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.form__input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+}
+
+.form__button {
+    width: 100%;
+    padding: 10px;
+    background-color: var(--steel-blue);
+    border: none;
+    color: black;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 3px;
+    text-align: center;
+}
+
+.form__button:hover {
+    background-color: var(--columbia-blue);
+}
+
+.form .form-link {
+    text-align: center;
+}
+
+.footer-container {
+    background-color: var(--lilac);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-social {
+    width: 50%;
+}
+
+.footer-marca {
+    font-family: SweetCupCake;
+    font-size: 3rem;
 }
