--- a/assets/style.css
+++ b/assets/style.css
@@ -28,30 +28,28 @@ html {
     scroll-padding-top: 100px;
 }
 
-/* Caracteristicas de mi Header */
-.header1 {
-    background: var(--steel-blue);
-    /* box-shadow: 0 12px 20px var(--steel-blue); */
-    width: 100%;    
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    justify-items: center;
-    align-items: center;
-    height: 170px;
-    padding: 10px 50px;
+header {
+    width: 100%;
     position: fixed;
     top: 0;
     z-index: 2;
 }
 
+/* Caracteristicas de mi Header */
+.header1 {
+    background: var(--steel-blue);
+    width: 100%;    
+    display: flex;
+    justify-items: center;
+    justify-content: space-between;
+    align-items: center;
+    height: 170px;
+    padding: 10px 100px;
+}
+
 .header1 .logo {
     height: 80%;
     border-radius: 15px;
-}
-
-.header1 .nombre {
-    font-family: SweetCupCake;
-    font-size: 4rem;
 }
 
 /* Caracteristicas de mi Navbar */
@@ -98,16 +96,12 @@ html {
 
 .header2 {
     background: var(--columbia-blue);
-    /* box-shadow: 0 12px 20px var(--steel-blue); */
     width: 100%;    
     display: flex;
     justify-content: center;
     align-items: center;
     height: 60px;
-    padding: 10px 50px;
-    position: fixed;
-    top: 170px;
-    z-index: 2;
+    padding: 10px;
 }
 
 .navbar2, .navbar2 ul {
@@ -137,6 +131,7 @@ main {
     align-items: center;
     justify-content: center;
     width: 100%;
+    margin-top: 230px;
 }
 
 #hero {
@@ -146,29 +141,28 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 120vh;
+    gap: 40px;
+    height: 76vh;
 }
 
 .hero-text {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     gap: 20px;
-    width: 50%;
 }
 
 .hero-text h1 {
-    font-size: 48px;
-    width: 80%;
-    min-width: 500px;
-    font-weight: 800;
-    color: var(--steel-blue);
+    font-family: SweetCupCake;
+    font-size: 4rem;
 }
 
-.hero-text p {
-    font-size: 16px;
-    width: 80%;
-    color: var(--gunmetal);
-    text-align: justify;
+.hero-text h2 {
+    font-size: 48px;
+    /* min-width: 500px; */
+    font-weight: 800;
+    color: var(--steel-blue);
 }
 
 .hero-img {
@@ -179,7 +173,6 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 20px;
 }
 
 .hero-img img {
@@ -188,14 +181,14 @@ main {
 
 /* Cards Section */
 #cards {
-    padding: 150px 0 50px 0;
+    /* padding: 150px 0 50px 0; */
     max-width: 1600px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 80px;
-    height: 120vh;
+    height: 76vh;
 }
 
 #cards h2 {
